
  * make dh-make-ruby resilient against a corrupt "gem name to package name"
    cache (Closes: #786841)
  * dh_ruby: install gemspecs _before_ running tests so that checking
    dependencies when running tests actually works.
  * gem2deb-test-runner: fix dependency checking during build (by fixing name
    of Rubygems environment variable, s/GEMPATH/GEM_PATH/)

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 12 Jun 2015 11:04:47 -0300

gem2deb (0.17) unstable; urgency=medium

  * dh-make-ruby:
    - fix call to wrap-and-sort
    - add -w/--overwrite option to overwrite files under debian/.
      Closes: #785106
    - only call wrap-and-sort if either there was no previous
      packaging, or -w/--overwrite was passed.
    - when acting on an existing source package, read the source package name
      from debian/changelog.
    - always create test suite files to make dh-make-ruby idempotent
    - suggest checking dependencies during build and on DEP-8 tests
  * gem2deb-test-runner:
    - add -c/--check-dependencies to check for dependencies (as declared in
      the Rubygems metadata, not as declared in debian/control) before running
      the tests (Closes: #785120, #770748)
    - always print command lines used to run the tests
    - add support for passing options via the GEM2DEB_TEST_RUNNER environment
      variable
    - add support for checking Rubygems dependencies during build
    - Breaks:/Replaces: gem2deb (<< 0.17~) because lib/gem2deb/metadata.rb was
      moved from gem2deb to gem2deb-test-runner.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 28 May 2015 08:39:49 -0300

gem2deb (0.16) unstable; urgency=medium

  * Add support for a 'nocheck' build profile, and document it in
    README.source. Closes: #632776
    + Also add version restrictions on dpkg-dev and debhelper.
  * Add patch from Cédric Boutillier, from a debian-ruby@ discussion from
    2012, that makes gem2tgz pick the most recent (in terms of gem version)